// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ StyledTabs-a4fwxl-2 hgGQCp sc-fyrnIy dCALAQ sc-iWVLQz iNMzwA"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 laQEse StyledTabs__StyledTabsHeader-a4fwxl-0 gqkPFy"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kpVwXf StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 ckOURw"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 gUMvwl"
        role="tabpanel"
      >
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV Tvbqi"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ StyledTabs-a4fwxl-2 hgGQCp sc-fyrnIy yXTqV sc-iWVLQz iNMzwA"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 laQEse StyledTabs__StyledTabsHeader-a4fwxl-0 gqkPFy"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kpVwXf StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 ckOURw"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 gUMvwl"
        role="tabpanel"
      >
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV Tvbqi"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ StyledTabs-a4fwxl-2 hgGQCp sc-fyrnIy yXTqV sc-iWVLQz iNMzwA"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 laQEse StyledTabs__StyledTabsHeader-a4fwxl-0 gqkPFy"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kpVwXf StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 ckOURw"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 jDncYU"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kXZhnL StyledTab-sc-1nnwnsb-0 jpOjol"
          >
            <span
              class="StyledText-sc-1sadyjn-0 hlXntN"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-a4fwxl-1 gUMvwl"
        role="tabpanel"
      >
        <div
          class="sc-fKVsgm hjxFYR sc-bBHwJV Tvbqi"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
